--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,6 @@ POSTGRES_DATABASE=drivent_test
 
 JWT_SECRET=top_secret
 VIA_CEP_API=https://viacep.com.br/ws
+REDIS_URL=redis://host:port
 
 DATABASE_URL=postgresql://${POSTGRES_USERNAME}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}?schema=public
