--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ POSTGRES_HOST=drivent-postgres-test
 POSTGRES_PORT=5433
 POSTGRES_DATABASE=drivent_test
 
+STRIPE_SECRET_KEY=
+CLIENT_URL=
+
 JWT_SECRET=top_secret
 VIA_CEP_API=https://viacep.com.br/ws
 
